--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@rollup/plugin-commonjs": "^28.0.0",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-terser": "^0.4.4",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
@@ -33,6 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
+    "rollup": "^4.24.0",
     "tailwindcss": "^3.4.13",
     "vite": "^5.4.8"
   }
